--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,5 @@
+actions:
+  vundle: vim +VundleClean! +VundleInstall +VundleInstall! +qall
 config:
   backup: true
   create: true
@@ -30,6 +32,8 @@ dotfiles:
   f_vimrc:
     dst: ~/.vimrc
     src: vimrc
+    actions:
+      - vundle
   f_zshrc:
     dst: ~/.zshrc
     src: zshrc
