--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,8 +1,7 @@
 set -g status-bg colour32
 set -g status-fg colour253
 set -g status-interval 100
-set -g status-left '#(ansiweather -a false)'
 set -g status-left-length 100
-set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
-set-option -g default-command "reattach-to-user-namespace -l zsh"
+set -g status-left '#(ansiweather -a false -p false -h false -w false)'
+set -g default-shell /bin/zsh
+
