--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,7 +1,9 @@
+set -g default-terminal "screen-256color"
 set -g status-bg colour32
 set -g status-fg colour253
 set -g status-interval 100
 set -g status-left-length 100
-set -g status-left '#(ansiweather -a false -p false -h false -w false)'
+set -g status-left '#(ansiweather -a false -f 2|sed -e "s/.*=> //")'
 set -g default-shell /bin/zsh
+set -g mouse on
 
