--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,9 +1,20 @@
-set -g default-terminal "screen-256color"
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-processes '~cmus'
+
+
+
+
+set -g status-left '#(curl "wttr.in/?format=3") '
+set -g status-interval 500
+set -g status-left-length 100
 set -g status-bg colour32
 set -g status-fg colour253
-set -g status-interval 10000
-set -g status-left-length 100
-set -g status-left '#(curl "wttr.in/Detroit?format=3") '
-set -g default-shell /bin/zsh
+set-option -g history-limit 50000
+
+
+
 set -g mouse on
+set-option -g mouse on
+run -b '~/.tmux/plugins/tpm/tpm'
 
