--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,12 +1,14 @@
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @resurrect-processes '~cmus'
+set -g @resurrect-processes '~node'
 
 
 
 
-set -g status-left '#(curl "wttr.in/?format=3") '
-set -g status-interval 500
+set -g status-left '#(curl "wttr.in/Detroit?format=3") '
+set -g status-interval 5000
 set -g status-left-length 100
 set -g status-bg colour32
 set -g status-fg colour253
