Crazy vim-vinegar transition from nerdtree

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,8 +1,7 @@
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @resurrect-processes '~cmus'
-set -g @resurrect-processes '~node'
+set -g @resurrect-processes '~cmus ~node'
 
 
 
@@ -17,6 +16,5 @@ set-option -g history-limit 50000
 
 
 set -g mouse on
-set-option -g mouse on
 run -b '~/.tmux/plugins/tpm/tpm'
 
