--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -13,7 +13,8 @@ set -g status-bg colour32
 set -g status-fg colour253
 set-option -g history-limit 50000
 
-
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 set -g mouse on
 run -b '~/.tmux/plugins/tpm/tpm'
