--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,3 +1,4 @@
 {
-  "eslint.autoFixOnSave": true
+  "eslint.autoFixOnSave": true,
+  "coc.preferences.formatOnSaveFiletypes": ["javascript", "css", "json"]
 }
