Add shortcuts for console.log in js

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,10 @@
 {
   "eslint.autoFixOnSave": true,
-  "coc.preferences.formatOnSaveFiletypes": ["javascript", "css", "json"]
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "css",
+    "json",
+    "markdown",
+    "md"
+  ]
 }
