--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+set-option -g default-terminal "screen-256color"
 set -g status-left '#(curl "wttr.in/Detroit?format=3") '
 set -g status-interval 5000
 set -g status-left-length 100
