--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,31 +1,11 @@
 set-option -g default-terminal "screen-256color"
-set -g status-left '#(curl "wttr.in/Detroit?format=3") '
+set -g status-left '#(curl "wttr.in/Albuquerque?format=3") '
 set -g status-interval 5000
 set -g status-left-length 100
 set -g status-bg colour32
 set -g status-fg colour253
 set-option -g history-limit 50000
 
-bind -n S-Left  previous-window
-bind -n S-Right next-window
-
 set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
-
-# To copy, left click and drag to highlight text in yellow,
-# once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
-setw -g mode-keys vi
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-
-set -sg escape-time 10
+set-option -g prefix M-b
 
