--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 set-option -g default-terminal "screen-256color"
-set -g status-left '#(curl "wttr.in/Albuquerque?format=3") '
+set -g status-left '#(curl "wttr.in/Albuquerque?u&format=3") '
 set -g status-interval 5000
 set -g status-left-length 100
 set -g status-bg colour32
