--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,6 @@
 set-option -g default-terminal "screen-256color"
+set-option -sg escape-time 10
+set-option -g focus-events on
 set -g status-left '#(curl "wttr.in/Albuquerque?u&format=3") '
 set -g status-interval 5000
 set -g status-left-length 100
