--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set-option -g default-terminal "screen-256color"
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g status-left '#(curl "wttr.in/Albuquerque?u&format=3") '
+set -g status-right '#(date +%Y-%m-%d)'
 set -g status-interval 5000
 set -g status-left-length 100
 set -g status-bg colour32
