--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g status-fg colour253
 set-option -g history-limit 50000
 
 set -g mouse on
-set -g prefix C-a
+set -g prefix C-q
 
 setw -g mode-keys vi
 unbind -T copy-mode-vi Enter
@@ -18,3 +18,7 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selecti
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 
+bind = split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+unbind '"'
+unbind %
