--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ set -g status-fg colour253
 set-option -g history-limit 50000
 
 set -g mouse on
-set -g prefix C-q
+set -g prefix C-]
 
 setw -g mode-keys vi
 unbind -T copy-mode-vi Enter
@@ -23,3 +23,5 @@ bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
+bind -n M-Left previous-window
+bind -n M-Right next-window
