--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,5 @@
 set-option -g default-terminal "screen-256color"
+set-option -sa terminal-overrides ',XXX:RGB'
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g status-left '#(curl "wttr.in/Albuquerque?u&format=3") '
