Move to lazy.nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g status-right '#(date +%Y-%m-%d)'
 set -g status-interval 5000
 set -g status-left-length 100
 set-option -g history-limit 50000
+set -g status-style bg=default
 
 set -g mouse on
 set -g prefix C-]
