Fix truecolor configuration

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 set-option -sg escape-time 10
 set-option -g focus-events on
 set -g status-left '#(curl "wttr.in/Albuquerque?u&format=3") '
