--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 
 set-option -sg escape-time 10
 set-option -g focus-events on
-set -g status-left '#(curl "wttr.in/Albuquerque?u&format=3") '
+set -g status-left '#(curl "wttr.in/Greenfield,MA?u&format=3") '
 set -g status-right '#(date +%Y-%m-%d)'
 set -g status-interval 5000
 set -g status-left-length 100
